# ITCar_Camera

./: .~lock.itcar_contour.py#  CMakeCache.txt  CMakeLists.txt~  ItcarVanishingpoint.cpp  ItcarVanishingpoint.cpp~  Line_tracking.py  Makefile  README.md  autocar  cmake_install.cmake  itcar_contour.py  itcar_contours.cpp  itcar_contours.cpp~  itcar_opencv_video.py  itcar_vanishingpoint_image.py  itcar_vanishingpoint_video.cpp  main.cpp  main.cpp~  main_autocar.cpp  main_autocar.cpp~  makefile  makefile~  output  sobelThresh  sobel_thresh.cpp  test_motor.cpp  test_motor.cpp~  test_opencv_itcar.py  testcam  testmotor  testsobel
SchematicAndPCB/: Backup Of GA37_Motor_Shield.pdsbak  Backup Of TK1_Shield.pdsbak  Backup Of TK1_Shield_Small.pdsbak  Backup Of shield.pdsbak  Backup Of shield_1_pin_motor.pdsbak  GA37_Motor_Shield.pdsprj.ANH-KHOA.Anh Khoa.workspace  Last Loaded GA37_Motor_Shield.pdsbak  Last Loaded TK1_Shield.pdsbak  Last Loaded TK1_Shield_Small.pdsbak  Last Loaded shield.pdsbak  Last Loaded shield_1_pin_motor.pdsbak  TK1_Shield.pdsprj  TK1_Shield.pdsprj.ANH-KHOA.Anh Khoa.workspace  TK1_Shield_small.pdsprj  shield.pdsprj  shield.pdsprj.ANH-KHOA.Anh Khoa.workspace  shield_1_pin_motor.pdsprj  shield_1_pin_motor.pdsprj.ANH-KHOA.Anh Khoa.workspace
TK1_DRIVER/: Controller.cpp  Controller.cpp~  Controller.h  Controller.h~
other_project/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  itcar_contours.cpp  main.cpp  test_motor.cpp  test_sobel.cpp
other_project/include/: sobel_thresh.h
other_project/src/: main.cpp  sobel_thresh.cpp
src/: train.xml  (+3 more)
(+3 files in other folders)
